# ue-mcp

./: .gitignore  ARGPARSE_REFACTORING_FIXES.md  ARGPARSE_REFACTORING_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PARAMS_REMOVAL_SUMMARY.md  README.md  pyproject.toml  test_output.txt
.claude/skills/ue-mcp-mastery/: SKILL.md
.claude/skills/ue-mcp-mastery/references/: extra-apis.md  ue5-python-patterns.md
scripts/: test_asset_inspect.py  test_blueprint_cdo.py  test_component_inspect.py
src/ue_mcp/: __init__.py  actor_snapshot.py  asset_tracker.py  autoconfig.py  code_inspector.py  editor_manager.py  log_watcher.py  pip_install.py  port_allocator.py  remote_client.py  script_executor.py  server.py  state.py  utils.py
src/ue_mcp/core/: __init__.py  constants.py  image_processing.py  paths.py  pip_install.py  utils.py
src/ue_mcp/editor/: __init__.py  build_manager.py  context.py  crash_detector.py  execution_manager.py  health_monitor.py  launch_manager.py  project_analyzer.py  status_manager.py  subsystems.py  types.py
src/ue_mcp/extra/scripts/: README.md  api_search.py  asset-diagnostic.py  asset_open.py  asset_query.py  editor_init.py  level_load.py  orbital-capture.py  pie-capture.py  pie_control.py  take_screenshots.py  window-capture.py
src/ue_mcp/extra/scripts/capture/: capture_orbital.py  capture_pie.py  capture_window.py  utils.py
src/ue_mcp/extra/scripts/diagnostic/: asset_snapshot.py  diagnostic_runner.py  inspect_runner.py
src/ue_mcp/extra/scripts/ue_mcp_capture/: __init__.py  capture_orbital.py  capture_pie.py  capture_window.py  execute_in_tick.py  trace_actors_pie.py  utils.py
src/ue_mcp/models/: __init__.py  assets.py  base.py  blueprint.py  components.py  descriptors.py  level.py  serializers.py
src/ue_mcp/references/: crate-meterials.md  querry-assets-with-python.md  varies-ways-to-open-level.md
src/ue_mcp/tools/: __init__.py  _helpers.py  api_search.py  capture.py  diagnostic.py  editor.py  execution.py  pie.py  project.py
src/ue_mcp/tracking/: __init__.py  actor_snapshot.py  asset_tracker.py  log_watcher.py
src/ue_mcp/ue5-dev-guidance/: deprecated-api-reference.md  physics-simulation-setup.md
src/ue_mcp/validation/: __init__.py  code_inspector.py
tests/: __init__.py  claude.md  conftest.py  mcp_servers.yaml  test_api_search.py  test_asset_tracking.py  test_autoconfig.py  test_capture_mcp.py  test_client_init.py  test_code_inspector.py  test_diagnostic_mcp.py  test_e2e_autoconfig.py  test_editor_log.py  test_editor_manager.py  test_execute_script_args.py  test_extract_paths.py  test_fuzzy_actor_matching.py  test_health_monitor.py  test_image_processing.py  test_inspect_screenshot.py  test_launch_build_check.py  test_level_diagnostic_unit.py  test_mcp_integration.py  test_multi_instance_isolation.py  test_pie_mcp.py  test_port_allocator.py  test_project_assets.py  test_remote_client.py  test_slate_tab_api.py  test_slate_tab_api_standalone.py  test_target_actor_capture.py  test_trace_actors_mcp.py  test_trace_actors_standalone.py  test_urf_diagnostic.py  test_utils.py
tests/fixtures/EmptyCPPProject/: EmptyCPPProject.uproject  UpgradeLog.htm
tests/fixtures/EmptyCPPProject/Config/: DefaultEngine.ini  DefaultGame.ini
tests/fixtures/EmptyCPPProject/Source/: EmptyCPPProject.Target.cs  EmptyCPPProjectEditor.Target.cs
tests/fixtures/EmptyCPPProject/Source/EmptyCPPProject/: EmptyCPPProject.Build.cs  EmptyCPPProject.cpp
tests/fixtures/EmptyProjectTemplate/: EmptyProjectTemplate.uproject
tests/fixtures/EmptyProjectTemplate/Config/: DefaultEngine.ini  DefaultGame.ini
tests/fixtures/EmptyProjectTemplate/Saved/webcache_6613/: Local State
tests/fixtures/EmptyProjectTemplate/Saved/webcache_6613/Default/: DIPS  (+6 more)
tests/fixtures/ThirdPersonTemplate/: thirdperson_template.uproject
tests/fixtures/ThirdPersonTemplate/.claude/: settings.local.json
tests/fixtures/ThirdPersonTemplate/Config/: DefaultEditorPerProjectUserSettings.ini  DefaultEngine.ini  DefaultGame.ini
tests/fixtures/ThirdPersonTemplate/Content/ThirdPerson/: DefaultAutomaticTestLevel.umap  MessyLevel.umap
tests/scripts/: generate_test_level.py
(+21 files in other folders)
