[project]
name = "ue-mcp"
version = "0.1.0"
description = "MCP server for Unreal Editor interaction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "UE-MCP Contributors" }]
keywords = ["unreal", "ue5", "mcp", "fastmcp", "editor", "automation"]

dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
ue-mcp = "ue_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ue_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Claude CLI and may require UE5)",
    "slow: marks tests as slow (may take minutes to complete)",
]
